// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form should not render any field if component type is not matched 1`] = `
.c5 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
}

.c3 {
  border: none;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  padding: 1rem 2.4rem 1.2rem 2.4rem;
  border-radius: 100rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 * {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c3:hover {
  cursor: pointer;
}

.c3:focus {
  outline: none;
}

.c3:disabled {
  cursor: not-allowed;
}

.c3:disabled {
  color: #98A7B7;
  background: #dfe4e9;
}

.c3:disabled .sc-AxiKw * {
  fill: #dfe4e9;
}

.c3:not(:disabled) {
  color: #ffffff;
}

.c3:not(:disabled) .sc-AxiKw * {
  fill: #ffffff;
}

.c3:not(:disabled):not(:hover) {
  background: #005AEE;
}

.c3:not(:disabled):hover {
  background: #1A6BF0;
  box-shadow: 0 0.4rem 0.8rem rgba(0,90,238,0.2);
}

.c3 .sc-AxiKw + .c4 {
  margin-left: 0.8rem;
}

.c3 .c4 + .sc-AxiKw {
  margin-left: 0.8rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-column: 1/-1;
  margin-top: 1.6rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c2 > * + * {
  margin-left: 1.6rem;
}

.c1 {
  grid-column: 1/-1;
}

.c1 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c0 {
  grid-template-rows: auto;
  grid-template-columns: repeat(12,1fr);
  grid-gap: 1.6rem;
  display: inline-grid;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
}

.c0 > h2 {
  grid-column: 1/-1;
  margin-bottom: 0.8rem;
}

.c0 > span {
  grid-column: 1/-1;
  margin-bottom: 1rem;
}

<div>
  <form
    class="c0"
    id="medly-dynamic-form"
  >
    <div
      class="c1"
    />
    <div
      class="c2"
    >
      <button
        class="c3"
        color="default"
        form="medly-dynamic-form"
        type="submit"
      >
        <span
          class="c4 c5"
        >
          Submit
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`Form should render properly with initial state 1`] = `
.c28 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.4rem;
  cursor: inherit;
}

.c28 * {
  fill-opacity: 1;
  fill: #607890;
}

.c61 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.0rem;
  cursor: pointer;
}

.c61 * {
  fill-opacity: 1;
  fill: #607890;
}

.c62 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.4rem;
  cursor: pointer;
}

.c62 * {
  fill-opacity: 1;
  fill: #607890;
}

.c18 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c21 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
}

.c64 {
  margin: 0;
  color: inherit;
  font-size: 1.8rem;
  font-weight: 700;
  -webkit-letter-spacing: -0.02rem;
  -moz-letter-spacing: -0.02rem;
  -ms-letter-spacing: -0.02rem;
  letter-spacing: -0.02rem;
  line-height: 2.4rem;
}

.c72 {
  border: none;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  padding: 1rem 2.4rem 1.2rem 2.4rem;
  border-radius: 100rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c72 * {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c72:hover {
  cursor: pointer;
}

.c72:focus {
  outline: none;
}

.c72:disabled {
  cursor: not-allowed;
}

.c72:disabled {
  color: #98A7B7;
  background: #dfe4e9;
}

.c72:disabled .c27 * {
  fill: #dfe4e9;
}

.c72:not(:disabled) {
  color: #ffffff;
}

.c72:not(:disabled) .c27 * {
  fill: #ffffff;
}

.c72:not(:disabled):not(:hover) {
  background: #005AEE;
}

.c72:not(:disabled):hover {
  background: #1A6BF0;
  box-shadow: 0 0.4rem 0.8rem rgba(0,90,238,0.2);
}

.c72 .c27 + .c17 {
  margin-left: 0.8rem;
}

.c72 .c17 + .c27 {
  margin-left: 0.8rem;
}

.c13 {
  color: #435465;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  margin: 0px 2.0rem 0px 0px;
  cursor: default;
}

.c13::after {
  color: red;
  content: ' *';
}

.c32 {
  color: #435465;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  margin: 0px 2.0rem 0px 0px;
  cursor: default;
}

.c36 {
  color: #435465;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  margin: 0px 0px 0px 2.0rem;
  cursor: pointer;
}

.c34 {
  grid-area: field;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  display: inline-grid;
}

.c14 {
  grid-area: label;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c19 {
  grid-area: description;
  margin: 5px 0 0 2px;
  color: #012040;
}

.c12 {
  margin: 0.8rem 0.8rem 0.8rem 0;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: minmax(max-content,25%) minmax(auto,80%);
  grid-template-areas: 'label field' 'random description';
}

.c12 .c33 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c31 {
  margin: 0.8rem 0;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: minmax(max-content,25%) minmax(auto,80%);
  grid-template-areas: 'label field' 'random description';
}

.c31 .c33 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c35 {
  margin: 0.8rem 0.8rem 0.8rem 0;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: max-content minmax(max-content,25%);
  grid-template-areas: 'field label' 'description random';
}

.c35 .c33 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c42 {
  margin: 0.8rem 0;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-areas: 'label' 'description' 'field';
  grid-template-columns: auto;
  grid-template-areas: 'field' 'description';
}

.c42 .c33 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c25 {
  margin: 0.3rem;
  position: relative;
  border: 1.5px solid;
  box-sizing: border-box;
  width: 1.8rem;
  height: 1.8rem;
  border-radius: 22.2%;
  border-color: #005AEE;
  background-color: #005AEE;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c25 .c27 * {
  fill: #ffffff;
}

.c30 {
  margin: 0.3rem;
  position: relative;
  border: 1.5px solid;
  box-sizing: border-box;
  width: 1.8rem;
  height: 1.8rem;
  border-radius: 22.2%;
  background-color: transparent;
  border-color: #13181D;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c23 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c23 * {
  cursor: pointer;
}

.c23 .c17 {
  color: #13181D;
  padding: 0 1.6rem;
}

.c23 .c27 {
  z-index: 1;
  pointer-events: none;
  position: absolute;
  -webkit-transition: -webkit-transform 0.2s ease-in-out;
  -webkit-transition: transform 0.2s ease-in-out;
  transition: transform 0.2s ease-in-out;
  -webkit-transform: scale(0.7);
  -ms-transform: scale(0.7);
  transform: scale(0.7);
}

.c23:hover .c24 {
  border-color: #1A6BF0;
  background-color: #1A6BF0;
}

.c29 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c29 * {
  cursor: pointer;
}

.c29 .c17 {
  color: #13181D;
  padding: 0 1.6rem;
}

.c29 .c27 {
  z-index: 1;
  pointer-events: none;
  position: absolute;
  -webkit-transition: -webkit-transform 0.2s ease-in-out;
  -webkit-transition: transform 0.2s ease-in-out;
  transition: transform 0.2s ease-in-out;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.c29:hover .c24 {
  border-color: #1A6BF0;
}

.c70 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c70 * {
  cursor: pointer;
}

.c70 .c17 {
  color: #13181D;
  padding: 0 1.6rem;
}

.c70 .c27 {
  z-index: 1;
  pointer-events: none;
  position: absolute;
  -webkit-transition: -webkit-transform 0.2s ease-in-out;
  -webkit-transition: transform 0.2s ease-in-out;
  transition: transform 0.2s ease-in-out;
  -webkit-transform: scale(0.7);
  -ms-transform: scale(0.7);
  transform: scale(0.7);
}

.c70:hover .c24 {
  border-color: #1A6BF0;
  background-color: #1A6BF0;
}

.c26 {
  opacity: 0;
  margin: 0;
  width: 100%;
  height: 100%;
  position: absolute;
}

.c26:focus {
  outline: none;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c20 > :first-child {
  margin-bottom: 0.9rem;
}

.c20 > .c17 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: inherit;
  color: #13181D;
}

.c20 .sc-fzoiQi {
  color: #303C48;
  margin: 0 0 1.2rem 0;
}

.c22 {
  display: grid;
  grid-template-columns: repeat(1,1fr);
}

.c60 {
  background-color: transparent;
  border: none;
  border-radius: 20px;
  padding: 3px 10px;
  margin: 2px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: -webkit-max-content;
  max-width: -moz-max-content;
  max-width: max-content;
  cursor: default;
  border: 1px solid #F38037;
  background-color: #F38037;
  color: #ffffff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c60:focus {
  outline: none;
}

.c60 .c27 * {
  fill: #ffffff;
}

.c60 .c17 + .c27 {
  cursor: pointer;
  margin-left: 10px;
}

.c8 {
  top: 0;
  left: 0;
  cursor: text;
  position: absolute;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  font-size: 1.6rem;
  line-height: 2.6rem;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  touch-action: manipulation;
  -webkit-transform: translate3d(0,58%,0);
  -ms-transform: translate3d(0,58%,0);
  transform: translate3d(0,58%,0);
}

.c8::after {
  content: ' *';
}

.c57 {
  pointer-events: none;
  margin-left: 1.6rem;
}

.c4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  box-sizing: border-box;
  height: 5.6rem;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  cursor: text;
  padding: 0 1.6rem;
  border-radius: 0.4rem 0.4rem 0 0;
  background-color: #eff2f4;
}

.c4 .c7 {
  color: #566c82;
}

.c4 .sc-fzpmMD,
.c4 .c56 {
  color: #566c82;
}

.c4 .sc-fzpmMD *,
.c4 .c56 * {
  fill: #566c82;
}

.c4 ~ .sc-fzoiQi {
  color: #566c82;
}

.c4::after {
  content: '';
  width: 100%;
  height: 0.1rem;
  position: absolute;
  bottom: 0;
  left: 0;
  background-color: #566c82;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c4:hover::after,
.c4:focus-within::after {
  height: 0.2rem;
}

.c4:focus-within,
.c4:focus-within:hover {
  border-color: #005AEE;
  background-color: #e6effd;
}

.c4:focus-within::after,
.c4:focus-within:hover::after {
  background-color: #005AEE;
}

.c4:focus-within .c7,
.c4:focus-within:hover .c7 {
  color: #005AEE;
}

.c4:focus-within .sc-fzpmMD,
.c4:focus-within:hover .sc-fzpmMD,
.c4:focus-within .c56,
.c4:focus-within:hover .c56 {
  color: #005AEE;
}

.c4:focus-within .sc-fzpmMD *,
.c4:focus-within:hover .sc-fzpmMD *,
.c4:focus-within .c56 *,
.c4:focus-within:hover .c56 * {
  fill: #005AEE;
}

.c4:focus-within input::-webkit-input-placeholder,
.c4:focus-within:hover input::-webkit-input-placeholder {
  color: rgba(0,90,238,.2);
}

.c4:focus-within input::-moz-placeholder,
.c4:focus-within:hover input::-moz-placeholder {
  color: rgba(0,90,238,.2);
}

.c4:focus-within input:-ms-input-placeholder,
.c4:focus-within:hover input:-ms-input-placeholder {
  color: rgba(0,90,238,.2);
}

.c4:focus-within input::placeholder,
.c4:focus-within:hover input::placeholder {
  color: rgba(0,90,238,.2);
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
}

.c3 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  min-width: 20rem;
  margin: 0.8rem 0.8rem 0.8rem 0;
}

.c55 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  min-width: 20rem;
  margin: 0.8rem 0;
}

.c6 {
  color: #13181D;
  font-size: 1.6rem;
  width: 100%;
  margin: 0;
  padding: 0;
  line-height: 2.6rem;
  box-sizing: border-box;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background: transparent;
  border: none;
  text-overflow: ellipsis;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  padding-bottom: 0.7rem;
}

.c6:focus {
  outline: none;
}

.c6:focus::-webkit-input-placeholder {
  opacity: 1;
}

.c6:focus::-moz-placeholder {
  opacity: 1;
}

.c6:focus:-ms-input-placeholder {
  opacity: 1;
}

.c6:focus::placeholder {
  opacity: 1;
}

.c6::-webkit-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c6::-moz-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c6:-ms-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c6::placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c6:not(:placeholder-shown) + .c7,
.c6:focus + .c7 {
  -webkit-transform: translate3d(0,20%,0) scale(0.75);
  -ms-transform: translate3d(0,20%,0) scale(0.75);
  transform: translate3d(0,20%,0) scale(0.75);
}

.c54 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  margin: 0.8rem 0.8rem 0.8rem 0;
}

.c54 .c2 {
  margin: 0;
  caret-color: transparent;
}

.c54 .c2 label {
  pointer-events: none;
}

.c54 .c2 div,
.c54 .c2 input,
.c54 .c2 label {
  cursor: pointer;
}

.c54 .c2 .c56 {
  -webkit-transition: -webkit-transform 200ms ease-out;
  -webkit-transition: transform 200ms ease-out;
  transition: transform 200ms ease-out;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c54 .c2 .c56 * {
  -webkit-transition: fill 100ms ease-out;
  transition: fill 100ms ease-out;
}

.c54 .c2:not(:focus-within):hover .c56 * {
  fill: #13181D;
}

.c41 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

.c41 .sc-fzoYkl {
  top: calc(100% + 5px);
  left: 0%;
}

.c58 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

.c58 .sc-fzoYkl {
  top: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c43 {
  grid-area: field;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  display: inline-grid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-clip: padding-box;
  box-sizing: border-box;
  border: 1px solid #b0bcc8;
  border-radius: 5px;
  overflow: hidden;
  width: 100%;
  height: -webkit-max-content;
  height: -moz-max-content;
  height: max-content;
}

.c43.c43.c43 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c43:focus-within {
  border-color: #012040;
}

.c43 > * {
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  padding: 0.8rem;
  color: #435465;
}

.c44 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: 0;
  border: 0;
  width: calc(100% - 16px);
  cursor: inherit;
  background-color: #ffffff;
}

.c44::-webkit-input-placeholder {
  color: #98A7B7;
}

.c44::-moz-placeholder {
  color: #98A7B7;
}

.c44:-ms-input-placeholder {
  color: #98A7B7;
}

.c44::placeholder {
  color: #98A7B7;
}

.c44::-webkit-file-upload-button {
  visibility: hidden;
}

.c45 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: inherit;
}

.c51 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c53 {
  box-sizing: border-box;
  position: absolute;
  bottom: unset;
  left: 0;
  top: unset;
  right: unset;
}

.c49 {
  display: block;
  position: relative;
  border: 1px solid #BCBEC0;
  background: #ffffff;
  border-radius: 2px;
  margin: 0;
}

.c50 {
  border: 0;
  padding: 0 44px;
  width: 100%;
  min-height: 46px;
  background: #ffffff;
  font-family: Montserrat,sans-serif;
  color: #001217;
  font-size: 14px;
  font-weight: 600;
  box-shadow: none;
  cursor: pointer;
  box-sizing: border-box;
  outline: 0;
}

.c50::-webkit-input-placeholder {
  font-weight: 500;
  color: #929598;
}

.c50::-moz-placeholder {
  font-weight: 500;
  color: #929598;
}

.c50:-moz-placeholder {
  font-weight: 500;
  color: #929598;
}

.c47 {
  box-sizing: border-box;
  position: relative;
}

.c52 {
  color: #BCBEC0;
  opacity: 1;
}

.c48 {
  display: grid;
  grid-template-columns: 194px 39px 194px;
  grid-template-rows: unset;
  background: transparent;
  border: 0;
  border-radius: 0;
}

.c46 > div:first-child div {
  z-index: 5;
}

.c46 > div:first-child > div:last-child {
  top: unset;
  bottom: unset;
  left: unset;
  right: unset;
  top: calc(100% + 5px);
  left: 0%;
}

.c46 > div:first-child > div:first-child {
  width: 100%;
  display: inline-grid;
  grid-template-columns: auto 30px auto;
  border: 1px solid #b0bcc8;
  border-radius: 5px;
  padding: 0.8rem;
  box-sizing: border-box;
  text-align: center;
  background-color: #ffffff;
  cursor: pointer;
}

.c46 > div:first-child > div:first-child * {
  background-color: #ffffff;
  cursor: pointer;
}

.c46 > div:first-child > div:first-child label {
  text-align: center;
  border: 0;
}

.c46 > div:first-child > div:first-child label input {
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: center;
  max-width: 90px;
  min-height: unset;
  padding: 0;
  color: #435465;
  background-clip: padding-box;
  box-sizing: border-box;
}

.c46 > div:first-child > div:first-child label input:disabled {
  cursor: not-allowed;
}

.c46 > div:first-child > div:first-child label input:focus {
  border-color: #012040;
  outline: 0;
}

.c46 > div:first-child > div:first-child label input::-webkit-input-placeholder {
  color: #98A7B7;
}

.c46 > div:first-child > div:first-child label input::-moz-placeholder {
  color: #98A7B7;
}

.c46 > div:first-child > div:first-child label input:-ms-input-placeholder {
  color: #98A7B7;
}

.c46 > div:first-child > div:first-child label input::placeholder {
  color: #98A7B7;
}

.c46 > div:first-child > div:first-child label input::-webkit-file-upload-button {
  visibility: hidden;
}

.c16 {
  width: 1px;
  opacity: 0;
}

.c15 {
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  padding: 0.8rem;
  color: #435465;
  background-clip: padding-box;
  background-color: #ffffff;
  box-sizing: border-box;
  border: 1px solid #b0bcc8;
  border-radius: 5px;
  cursor: pointer;
  text-align: center;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c15:focus {
  border-color: #012040;
  outline: 0;
}

.c59 {
  border: 1px solid #C7D0D8;
  background-color: #ffffff;
  cursor: pointer;
  border-radius: 4px;
  box-sizing: border-box;
  overflow: hidden;
  min-width: 150px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  height: auto;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c59 * {
  cursor: pointer;
}

.c59 .c11 {
  margin: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c59 .c11 > * {
  margin: 0;
  border: none;
  background-color: transparent;
}

.c59:focus-within {
  border-color: #012040;
}

.c63 {
  max-width: 24px;
  margin-right: 0.4rem;
}

.c40 {
  background-color: #012040;
  width: 0;
  height: 0;
  z-index: 1;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c38 {
  opacity: 0;
  z-index: 2;
  position: absolute;
  width: 100%;
  height: 100%;
  margin: 0;
  cursor: pointer;
}

.c38:checked ~ .c39 {
  width: calc(75%);
  height: calc(75%);
  -webkit-transition: width 0.2s ease,height 0.2s ease;
  transition: width 0.2s ease,height 0.2s ease;
}

.c37 {
  width: 16px;
  height: 16px;
  position: relative;
  border-radius: 100%;
  border: 1px solid #C7D0D8;
  background-color: #ffffff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c37:focus-within {
  box-shadow: 0 0 0 1pt #012040;
}

.c71 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-column: 1/-1;
  margin-top: 1.6rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c71 > * + * {
  margin-left: 1.6rem;
}

.c1 {
  grid-column: 1/7;
}

.c1 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c9 {
  grid-column: 7/-1;
}

.c9 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c10 {
  grid-column: 1/-1;
}

.c10 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c67 {
  grid-column: 1/5;
}

.c67 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c68 {
  grid-column: 5/9;
}

.c68 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c69 {
  grid-column: 9/-1;
}

.c69 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c65 {
  grid-column: 1/-1;
  margin-top: 2.6rem;
}

.c66 {
  margin-bottom: 1rem;
}

.c0 {
  grid-template-rows: auto;
  grid-template-columns: repeat(12,1fr);
  grid-gap: 1.6rem;
  display: inline-grid;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
}

.c0 > h2 {
  grid-column: 1/-1;
  margin-bottom: 0.8rem;
}

.c0 > span {
  grid-column: 1/-1;
  margin-bottom: 1rem;
}

<div>
  <form
    class="c0"
    id="medly-dynamic-form"
  >
    <div
      class="c1"
    >
      <div
        class="c2 c3"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <input
              aria-describedby="firstName-helper-text"
              class="c6"
              id="firstName-input"
              name="firstName"
              placeholder=" "
              required=""
              type="text"
              value="first name"
            />
            <label
              class="c7 c8"
              for="firstName-input"
              required=""
            >
              First Name
            </label>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="c9"
    >
      <div
        class="c2 c3"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <input
              aria-describedby="lastName-helper-text"
              class="c6"
              id="lastName-input"
              name="lastName"
              placeholder=" "
              required=""
              type="text"
              value="last name"
            />
            <label
              class="c7 c8"
              for="lastName-input"
              required=""
            >
              Last Name
            </label>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="c10"
    >
      <div
        class="c2 c3"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <input
              aria-describedby="email-helper-text"
              class="c6"
              id="email-input"
              name="email"
              placeholder=" "
              required=""
              type="email"
              value="email@email.com"
            />
            <label
              class="c7 c8"
              for="email-input"
              required=""
            >
              Email
            </label>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="c10"
    >
      <div
        class="c11 c12"
        id="resume-field"
      >
        <label
          class="c13 c14"
          required=""
        >
          Resume
        </label>
        <label
          class="c15"
          id="resume-label"
        >
          Click to choose file
          <input
            class="c16"
            id="resume"
            name="resume"
            required=""
            type="file"
          />
        </label>
        <span
          class="c17 c18 c19"
        >
          File size should be less than 5MB
        </span>
      </div>
    </div>
    <div
      class="c10"
    >
      <div
        class="c20"
        id="Languages-checkboxGroup"
      >
        <span
          class="c17 c21"
        >
          Languages
        </span>
        
        <div
          class="c22"
        >
          <label
            class="c23"
            for="JAVA"
            id="JAVA-wrapper"
          >
            <span
              class="c17 c18"
            >
              JAVA
            </span>
            <div
              class="c24 c25"
            >
              <input
                checked=""
                class="c26"
                id="JAVA"
                name="java"
                type="checkbox"
              />
              <svg
                class="c27 c28"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                  fill="green"
                />
              </svg>
            </div>
          </label>
          <label
            class="c29"
            for="RUBY"
            id="RUBY-wrapper"
          >
            <span
              class="c17 c18"
            >
              RUBY
            </span>
            <div
              class="c24 c30"
            >
              <input
                class="c26"
                id="RUBY"
                name="ruby"
                type="checkbox"
              />
              <svg
                class="c27 c28"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                  fill="green"
                />
              </svg>
            </div>
          </label>
        </div>
      </div>
    </div>
    <div
      class="c10"
    >
      <div
        class="c11 c31"
        id="Role-radioGroup"
      >
        <label
          class="c32 c14"
        >
          Role
        </label>
        <div
          class="c33 c34"
        >
          <div
            class="c11 c35"
            id="Front End-radio"
          >
            <label
              class="c36 c14"
              for="Front End"
            >
              Front End
            </label>
            <div
              class="c37"
            >
              <input
                checked=""
                class="c38"
                id="Front End"
                name="role"
                type="radio"
                value="front-end"
              />
              <div
                class="c39 c40"
              />
            </div>
          </div>
          <div
            class="c11 c35"
            id="Back End-radio"
          >
            <label
              class="c36 c14"
              for="Back End"
            >
              Back End
            </label>
            <div
              class="c37"
            >
              <input
                class="c38"
                id="Back End"
                name="role"
                type="radio"
                value="back-end"
              />
              <div
                class="c39 c40"
              />
            </div>
          </div>
          <div
            class="c11 c35"
            id="Full Stack-radio"
          >
            <label
              class="c36 c14"
              for="Full Stack"
            >
              Full Stack
            </label>
            <div
              class="c37"
            >
              <input
                class="c38"
                id="Full Stack"
                name="role"
                type="radio"
                value="full-stack"
              />
              <div
                class="c39 c40"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c10"
    >
      <div
        class="c11 c12"
        id="birthDate"
      >
        <label
          class="c32 c14"
          for="birthDate"
        >
          Birth Date
        </label>
        <div
          class="c41"
          id="medly-popover-wrapper"
        >
          <div
            class="c11 c42"
            id="birthDate-input-field"
          >
            
            <div
              class="c33 c43"
            >
              <input
                autocomplete="off"
                class="c44 c45"
                id="birthDate-input"
                name="birthDate"
                placeholder="Birth Date"
                type="text"
                value="01/01/2019"
              />
            </div>
            
          </div>
        </div>
      </div>
    </div>
    <div
      class="c10"
    >
      <div
        class="c11 c12"
      >
        <label
          class="c32 c14"
          for="Experience"
        >
          Experience
        </label>
        <div
          class="c46"
          data-testid="react-datepicker"
        >
          <div
            class="c47"
          >
            <div
              class="sc-fzpkqZ c48"
              data-testid="DateRangeInputGrid"
            >
              <label
                class="c49"
                display="block"
                for="startDate"
              >
                <input
                  aria-label="Start date"
                  autocomplete="off"
                  class="c50"
                  color="#001217"
                  data-testid="DatepickerInput"
                  font-family="Montserrat, sans-serif"
                  font-size="14px"
                  font-weight="600"
                  id="startDate"
                  placeholder="Start date"
                  tabindex="0"
                  value="01/01/2019"
                  width="100%"
                />
              </label>
              <div
                class="c51"
              >
                <svg
                  class="c52"
                  height="12px"
                  transform="rotate(90 0 0)"
                  viewBox="0 0 9 12"
                  width="15px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4.46.001a.538.538 0 0 0-.358.174L.156 4.48a.538.538 0 1 0 .796.724l3.01-3.285v13.689a.563.563 0 0 0 .538.55.563.563 0 0 0 .538-.55V1.918l3.01 3.286a.538.538 0 1 0 .796-.724L4.898.175a.538.538 0 0 0-.437-.174z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <label
                class="c49"
                display="block"
                for="endDate"
              >
                <input
                  aria-label="End date"
                  autocomplete="off"
                  class="c50"
                  color="#001217"
                  data-testid="DatepickerInput"
                  font-family="Montserrat, sans-serif"
                  font-size="14px"
                  font-weight="600"
                  id="endDate"
                  placeholder="End date"
                  tabindex="0"
                  value="01/02/2019"
                  width="100%"
                />
              </label>
            </div>
            <div
              class="c53"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="c10"
    >
      <div
        class="c54"
      >
        <div
          class="c2 c55"
        >
          <div
            class="c4"
          >
            <div
              class="c5"
            >
              <input
                aria-describedby="country-helper-text"
                autocomplete="off"
                class="c6"
                id="country-input"
                name="country"
                placeholder="Please Select . . ."
                required=""
                type="text"
                value="India"
              />
              <label
                class="c7 c8"
                for="country-input"
                required=""
              >
                Country
              </label>
            </div>
            <svg
              class="c27 c28 c56 c57"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.792 14.97a1 1 0 0 1-1.584 0l-3.165-4.11a1 1 0 0 1 .793-1.61h6.328a1 1 0 0 1 .793 1.61l-3.165 4.11z"
                fill="#000"
              />
            </svg>
          </div>
          
        </div>
      </div>
    </div>
    <div
      class="c10"
    >
      <div
        class="c11 c12"
        id="graduation-field"
      >
        <label
          class="c32 c14"
          for="graduation"
        >
          Graduation
        </label>
        <div
          class="c58"
          id="medly-popover-wrapper"
        >
          <div
            class="c59"
            id="graduation-container"
          >
            <button
              class="c60"
            >
              <span
                class="c17 c18"
              >
                BTech
              </span>
              <svg
                class="c27 c61"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.3 5.71a.996.996 0 0 0-1.41 0L12 10.59 7.11 5.7A.996.996 0 1 0 5.7 7.11L10.59 12 5.7 16.89a.996.996 0 1 0 1.41 1.41L12 13.41l4.89 4.89a.996.996 0 1 0 1.41-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  fill="#000"
                  fill-opacity=".54"
                />
              </svg>
            </button>
            <div
              class="c11 c42"
              id="graduation-input-field"
            >
              
              <div
                class="c33 c43"
              >
                <input
                  autocomplete="off"
                  class="c44"
                  id="graduation-input"
                  placeholder="1 options selected"
                  type="text"
                  value=""
                />
              </div>
              
            </div>
            <svg
              class="c27 c62 c63"
              fill="none"
              height="1em"
              theme="[object Object]"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.875 9l-3.88 3.88L8.115 9a.996.996 0 1 0-1.41 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59a.996.996 0 0 0 0-1.41c-.39-.38-1.03-.39-1.42 0z"
                fill="#000"
                fill-opacity=".54"
              />
            </svg>
          </div>
        </div>
        
      </div>
    </div>
    <h4
      class="c17 c64 c65"
    >
      Marks
    </h4>
    <span
      class="c17 c18 c66"
    >
      Marks Information
    </span>
    <div
      class="c67"
    >
      <div
        class="c2 c3"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <input
              aria-describedby="marks.database-helper-text"
              class="c6"
              id="marks.database-input"
              name="marks.database"
              placeholder="Database"
              required=""
              type="number"
              value="10"
            />
            <label
              class="c7 c8"
              for="marks.database-input"
              required=""
            >
              Database
            </label>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="c68"
    >
      <div
        class="c2 c3"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <input
              aria-describedby="marks.algorithms-helper-text"
              class="c6"
              id="marks.algorithms-input"
              name="marks.algorithms"
              placeholder="Algorithms"
              required=""
              type="number"
              value="10"
            />
            <label
              class="c7 c8"
              for="marks.algorithms-input"
              required=""
            >
              Algorithms
            </label>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="c69"
    >
      <div
        class="c2 c3"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <input
              aria-describedby="marks.maths-helper-text"
              class="c6"
              id="marks.maths-input"
              name="marks.maths"
              placeholder="Maths"
              required=""
              type="number"
              value="10"
            />
            <label
              class="c7 c8"
              for="marks.maths-input"
              required=""
            >
              Maths
            </label>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="c10"
    >
      <label
        class="c70"
        for="agree"
        id="agree-wrapper"
      >
        <span
          class="c17 c18"
        >
          Do you Agree
        </span>
        <div
          class="c24 c25"
        >
          <input
            checked=""
            class="c26"
            id="agree"
            name="agree"
            type="checkbox"
          />
          <svg
            class="c27 c28"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
              fill="green"
            />
          </svg>
        </div>
      </label>
    </div>
    <div
      class="c71"
    >
      <button
        class="c72"
        color="default"
        form="medly-dynamic-form"
        type="submit"
      >
        <span
          class="c17 c21"
        >
          Submit
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`Form should render properly without initial state 1`] = `
.c30 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.4rem;
  cursor: inherit;
}

.c30 * {
  fill-opacity: 1;
  fill: #607890;
}

.c60 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.4rem;
  cursor: pointer;
}

.c60 * {
  fill-opacity: 1;
  fill: #607890;
}

.c2 {
  margin: 0;
  color: inherit;
  font-size: 3.2rem;
  font-weight: 600;
  -webkit-letter-spacing: -0.04rem;
  -moz-letter-spacing: -0.04rem;
  -ms-letter-spacing: -0.04rem;
  letter-spacing: -0.04rem;
  line-height: 4.0rem;
}

.c3 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
}

.c20 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c23 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
}

.c62 {
  margin: 0;
  color: inherit;
  font-size: 1.8rem;
  font-weight: 700;
  -webkit-letter-spacing: -0.02rem;
  -moz-letter-spacing: -0.02rem;
  -ms-letter-spacing: -0.02rem;
  letter-spacing: -0.02rem;
  line-height: 2.4rem;
}

.c70 {
  border: none;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  padding: 1rem 2.4rem 1.2rem 2.4rem;
  border-radius: 100rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c70 * {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c70:hover {
  cursor: pointer;
}

.c70:focus {
  outline: none;
}

.c70:disabled {
  cursor: not-allowed;
}

.c70:disabled {
  color: #98A7B7;
  background: #dfe4e9;
}

.c70:disabled .c29 * {
  fill: #dfe4e9;
}

.c70:not(:disabled) {
  color: #ffffff;
}

.c70:not(:disabled) .c29 * {
  fill: #ffffff;
}

.c70:not(:disabled):not(:hover) {
  background: #005AEE;
}

.c70:not(:disabled):hover {
  background: #1A6BF0;
  box-shadow: 0 0.4rem 0.8rem rgba(0,90,238,0.2);
}

.c70 .c29 + .c1 {
  margin-left: 0.8rem;
}

.c70 .c1 + .c29 {
  margin-left: 0.8rem;
}

.c16 {
  color: #435465;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  margin: 0px 2.0rem 0px 0px;
  cursor: default;
}

.c16::after {
  color: red;
  content: ' *';
}

.c32 {
  color: #435465;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  margin: 0px 2.0rem 0px 0px;
  cursor: default;
}

.c36 {
  color: #435465;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  margin: 0px 0px 0px 2.0rem;
  cursor: pointer;
}

.c34 {
  grid-area: field;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  display: inline-grid;
}

.c17 {
  grid-area: label;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c21 {
  grid-area: description;
  margin: 5px 0 0 2px;
  color: #012040;
}

.c15 {
  margin: 0.8rem 0.8rem 0.8rem 0;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: minmax(max-content,25%) minmax(auto,80%);
  grid-template-areas: 'label field' 'random description';
}

.c15 .c33 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c31 {
  margin: 0.8rem 0;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: minmax(max-content,25%) minmax(auto,80%);
  grid-template-areas: 'label field' 'random description';
}

.c31 .c33 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c35 {
  margin: 0.8rem 0.8rem 0.8rem 0;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: max-content minmax(max-content,25%);
  grid-template-areas: 'field label' 'description random';
}

.c35 .c33 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c42 {
  margin: 0.8rem 0;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-areas: 'label' 'description' 'field';
  grid-template-columns: auto;
  grid-template-areas: 'field' 'description';
}

.c42 .c33 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c27 {
  margin: 0.3rem;
  position: relative;
  border: 1.5px solid;
  box-sizing: border-box;
  width: 1.8rem;
  height: 1.8rem;
  border-radius: 22.2%;
  background-color: transparent;
  border-color: #13181D;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c25 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c25 * {
  cursor: pointer;
}

.c25 .c1 {
  color: #13181D;
  padding: 0 1.6rem;
}

.c25 .c29 {
  z-index: 1;
  pointer-events: none;
  position: absolute;
  -webkit-transition: -webkit-transform 0.2s ease-in-out;
  -webkit-transition: transform 0.2s ease-in-out;
  transition: transform 0.2s ease-in-out;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.c25:hover .c26 {
  border-color: #1A6BF0;
}

.c68 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c68 * {
  cursor: pointer;
}

.c68 .c1 {
  color: #13181D;
  padding: 0 1.6rem;
}

.c68 .c29 {
  z-index: 1;
  pointer-events: none;
  position: absolute;
  -webkit-transition: -webkit-transform 0.2s ease-in-out;
  -webkit-transition: transform 0.2s ease-in-out;
  transition: transform 0.2s ease-in-out;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.c68:hover .c26 {
  border-color: #1A6BF0;
}

.c28 {
  opacity: 0;
  margin: 0;
  width: 100%;
  height: 100%;
  position: absolute;
}

.c28:focus {
  outline: none;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c22 > :first-child {
  margin-bottom: 0.9rem;
}

.c22 > .c1 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: inherit;
  color: #13181D;
}

.c22 .sc-fzoiQi {
  color: #303C48;
  margin: 0 0 1.2rem 0;
}

.c24 {
  display: grid;
  grid-template-columns: repeat(1,1fr);
}

.c11 {
  top: 0;
  left: 0;
  cursor: text;
  position: absolute;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  font-size: 1.6rem;
  line-height: 2.6rem;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  touch-action: manipulation;
  -webkit-transform: translate3d(0,58%,0);
  -ms-transform: translate3d(0,58%,0);
  transform: translate3d(0,58%,0);
}

.c11::after {
  content: ' *';
}

.c57 {
  pointer-events: none;
  margin-left: 1.6rem;
}

.c7 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  box-sizing: border-box;
  height: 5.6rem;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  cursor: text;
  padding: 0 1.6rem;
  border-radius: 0.4rem 0.4rem 0 0;
  background-color: #eff2f4;
}

.c7 .c10 {
  color: #566c82;
}

.c7 .sc-fzpmMD,
.c7 .c56 {
  color: #566c82;
}

.c7 .sc-fzpmMD *,
.c7 .c56 * {
  fill: #566c82;
}

.c7 ~ .sc-fzoiQi {
  color: #566c82;
}

.c7::after {
  content: '';
  width: 100%;
  height: 0.1rem;
  position: absolute;
  bottom: 0;
  left: 0;
  background-color: #566c82;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c7:hover::after,
.c7:focus-within::after {
  height: 0.2rem;
}

.c7:focus-within,
.c7:focus-within:hover {
  border-color: #005AEE;
  background-color: #e6effd;
}

.c7:focus-within::after,
.c7:focus-within:hover::after {
  background-color: #005AEE;
}

.c7:focus-within .c10,
.c7:focus-within:hover .c10 {
  color: #005AEE;
}

.c7:focus-within .sc-fzpmMD,
.c7:focus-within:hover .sc-fzpmMD,
.c7:focus-within .c56,
.c7:focus-within:hover .c56 {
  color: #005AEE;
}

.c7:focus-within .sc-fzpmMD *,
.c7:focus-within:hover .sc-fzpmMD *,
.c7:focus-within .c56 *,
.c7:focus-within:hover .c56 * {
  fill: #005AEE;
}

.c7:focus-within input::-webkit-input-placeholder,
.c7:focus-within:hover input::-webkit-input-placeholder {
  color: rgba(0,90,238,.2);
}

.c7:focus-within input::-moz-placeholder,
.c7:focus-within:hover input::-moz-placeholder {
  color: rgba(0,90,238,.2);
}

.c7:focus-within input:-ms-input-placeholder,
.c7:focus-within:hover input:-ms-input-placeholder {
  color: rgba(0,90,238,.2);
}

.c7:focus-within input::placeholder,
.c7:focus-within:hover input::placeholder {
  color: rgba(0,90,238,.2);
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
}

.c6 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  min-width: 20rem;
  margin: 0.8rem 0.8rem 0.8rem 0;
}

.c55 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  min-width: 20rem;
  margin: 0.8rem 0;
}

.c9 {
  color: #13181D;
  font-size: 1.6rem;
  width: 100%;
  margin: 0;
  padding: 0;
  line-height: 2.6rem;
  box-sizing: border-box;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background: transparent;
  border: none;
  text-overflow: ellipsis;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  padding-bottom: 0.7rem;
}

.c9:focus {
  outline: none;
}

.c9:focus::-webkit-input-placeholder {
  opacity: 1;
}

.c9:focus::-moz-placeholder {
  opacity: 1;
}

.c9:focus:-ms-input-placeholder {
  opacity: 1;
}

.c9:focus::placeholder {
  opacity: 1;
}

.c9::-webkit-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c9::-moz-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c9:-ms-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c9::placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c9:not(:placeholder-shown) + .c10,
.c9:focus + .c10 {
  -webkit-transform: translate3d(0,20%,0) scale(0.75);
  -ms-transform: translate3d(0,20%,0) scale(0.75);
  transform: translate3d(0,20%,0) scale(0.75);
}

.c54 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  margin: 0.8rem 0.8rem 0.8rem 0;
}

.c54 .c5 {
  margin: 0;
  caret-color: transparent;
}

.c54 .c5 label {
  pointer-events: none;
}

.c54 .c5 div,
.c54 .c5 input,
.c54 .c5 label {
  cursor: pointer;
}

.c54 .c5 .c56 {
  -webkit-transition: -webkit-transform 200ms ease-out;
  -webkit-transition: transform 200ms ease-out;
  transition: transform 200ms ease-out;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c54 .c5 .c56 * {
  -webkit-transition: fill 100ms ease-out;
  transition: fill 100ms ease-out;
}

.c54 .c5:not(:focus-within):hover .c56 * {
  fill: #13181D;
}

.c41 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

.c41 .sc-fzoYkl {
  top: calc(100% + 5px);
  left: 0%;
}

.c58 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

.c58 .sc-fzoYkl {
  top: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c43 {
  grid-area: field;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  display: inline-grid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-clip: padding-box;
  box-sizing: border-box;
  border: 1px solid #b0bcc8;
  border-radius: 5px;
  overflow: hidden;
  width: 100%;
  height: -webkit-max-content;
  height: -moz-max-content;
  height: max-content;
}

.c43.c43.c43 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c43:focus-within {
  border-color: #012040;
}

.c43 > * {
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  padding: 0.8rem;
  color: #435465;
}

.c44 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: 0;
  border: 0;
  width: calc(100% - 16px);
  cursor: inherit;
  background-color: #ffffff;
}

.c44::-webkit-input-placeholder {
  color: #98A7B7;
}

.c44::-moz-placeholder {
  color: #98A7B7;
}

.c44:-ms-input-placeholder {
  color: #98A7B7;
}

.c44::placeholder {
  color: #98A7B7;
}

.c44::-webkit-file-upload-button {
  visibility: hidden;
}

.c45 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: inherit;
}

.c51 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c53 {
  box-sizing: border-box;
  position: absolute;
  bottom: unset;
  left: 0;
  top: unset;
  right: unset;
}

.c49 {
  display: block;
  position: relative;
  border: 1px solid #BCBEC0;
  background: #ffffff;
  border-radius: 2px;
  margin: 0;
}

.c50 {
  border: 0;
  padding: 0 44px;
  width: 100%;
  min-height: 46px;
  background: #ffffff;
  font-family: Montserrat,sans-serif;
  color: #001217;
  font-size: 14px;
  font-weight: 600;
  box-shadow: none;
  cursor: pointer;
  box-sizing: border-box;
  outline: 0;
}

.c50::-webkit-input-placeholder {
  font-weight: 500;
  color: #929598;
}

.c50::-moz-placeholder {
  font-weight: 500;
  color: #929598;
}

.c50:-moz-placeholder {
  font-weight: 500;
  color: #929598;
}

.c47 {
  box-sizing: border-box;
  position: relative;
}

.c52 {
  color: #BCBEC0;
  opacity: 1;
}

.c48 {
  display: grid;
  grid-template-columns: 194px 39px 194px;
  grid-template-rows: unset;
  background: transparent;
  border: 0;
  border-radius: 0;
}

.c46 > div:first-child div {
  z-index: 5;
}

.c46 > div:first-child > div:last-child {
  top: unset;
  bottom: unset;
  left: unset;
  right: unset;
  top: calc(100% + 5px);
  left: 0%;
}

.c46 > div:first-child > div:first-child {
  width: 100%;
  display: inline-grid;
  grid-template-columns: auto 30px auto;
  border: 1px solid #b0bcc8;
  border-radius: 5px;
  padding: 0.8rem;
  box-sizing: border-box;
  text-align: center;
  background-color: #ffffff;
  cursor: pointer;
}

.c46 > div:first-child > div:first-child * {
  background-color: #ffffff;
  cursor: pointer;
}

.c46 > div:first-child > div:first-child label {
  text-align: center;
  border: 0;
}

.c46 > div:first-child > div:first-child label input {
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: center;
  max-width: 90px;
  min-height: unset;
  padding: 0;
  color: #435465;
  background-clip: padding-box;
  box-sizing: border-box;
}

.c46 > div:first-child > div:first-child label input:disabled {
  cursor: not-allowed;
}

.c46 > div:first-child > div:first-child label input:focus {
  border-color: #012040;
  outline: 0;
}

.c46 > div:first-child > div:first-child label input::-webkit-input-placeholder {
  color: #98A7B7;
}

.c46 > div:first-child > div:first-child label input::-moz-placeholder {
  color: #98A7B7;
}

.c46 > div:first-child > div:first-child label input:-ms-input-placeholder {
  color: #98A7B7;
}

.c46 > div:first-child > div:first-child label input::placeholder {
  color: #98A7B7;
}

.c46 > div:first-child > div:first-child label input::-webkit-file-upload-button {
  visibility: hidden;
}

.c19 {
  width: 1px;
  opacity: 0;
}

.c18 {
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  padding: 0.8rem;
  color: #435465;
  background-clip: padding-box;
  background-color: #ffffff;
  box-sizing: border-box;
  border: 1px solid #b0bcc8;
  border-radius: 5px;
  cursor: pointer;
  text-align: center;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c18:focus {
  border-color: #012040;
  outline: 0;
}

.c59 {
  border: 1px solid #C7D0D8;
  background-color: #ffffff;
  cursor: pointer;
  border-radius: 4px;
  box-sizing: border-box;
  overflow: hidden;
  min-width: 150px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  height: auto;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c59 * {
  cursor: pointer;
}

.c59 .c14 {
  margin: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c59 .c14 > * {
  margin: 0;
  border: none;
  background-color: transparent;
}

.c59:focus-within {
  border-color: #012040;
}

.c61 {
  max-width: 24px;
  margin-right: 0.4rem;
}

.c40 {
  background-color: #012040;
  width: 0;
  height: 0;
  z-index: 1;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c38 {
  opacity: 0;
  z-index: 2;
  position: absolute;
  width: 100%;
  height: 100%;
  margin: 0;
  cursor: pointer;
}

.c38:checked ~ .c39 {
  width: calc(75%);
  height: calc(75%);
  -webkit-transition: width 0.2s ease,height 0.2s ease;
  transition: width 0.2s ease,height 0.2s ease;
}

.c37 {
  width: 16px;
  height: 16px;
  position: relative;
  border-radius: 100%;
  border: 1px solid #C7D0D8;
  background-color: #ffffff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c37:focus-within {
  box-shadow: 0 0 0 1pt #012040;
}

.c69 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-column: 1/-1;
  margin-top: 1.6rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c69 > * + * {
  margin-left: 1.6rem;
}

.c4 {
  grid-column: 1/7;
}

.c4 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c12 {
  grid-column: 7/-1;
}

.c12 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c13 {
  grid-column: 1/-1;
}

.c13 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c65 {
  grid-column: 1/5;
}

.c65 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c66 {
  grid-column: 5/9;
}

.c66 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c67 {
  grid-column: 9/-1;
}

.c67 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c63 {
  grid-column: 1/-1;
  margin-top: 2.6rem;
}

.c64 {
  margin-bottom: 1rem;
}

.c0 {
  grid-template-rows: auto;
  grid-template-columns: repeat(12,1fr);
  grid-gap: 1.6rem;
  display: grid;
  width: 100%;
  min-width: 300px;
}

.c0 > h2 {
  grid-column: 1/-1;
  margin-bottom: 0.8rem;
}

.c0 > span {
  grid-column: 1/-1;
  margin-bottom: 1rem;
}

<div>
  <form
    class="c0"
    id="medly-dynamic-form"
  >
    <h2
      class="c1 c2"
    >
      Dummy Form
    </h2>
    <span
      class="c1 c3"
    >
      Dummy Description
    </span>
    <div
      class="c4"
    >
      <div
        class="c5 c6"
      >
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            <input
              aria-describedby="firstName-helper-text"
              class="c9"
              id="firstName-input"
              name="firstName"
              placeholder=" "
              required=""
              type="text"
              value=""
            />
            <label
              class="c10 c11"
              for="firstName-input"
              required=""
            >
              First Name
            </label>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="c12"
    >
      <div
        class="c5 c6"
      >
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            <input
              aria-describedby="lastName-helper-text"
              class="c9"
              id="lastName-input"
              name="lastName"
              placeholder=" "
              required=""
              type="text"
              value=""
            />
            <label
              class="c10 c11"
              for="lastName-input"
              required=""
            >
              Last Name
            </label>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="c13"
    >
      <div
        class="c5 c6"
      >
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            <input
              aria-describedby="email-helper-text"
              class="c9"
              id="email-input"
              name="email"
              placeholder=" "
              required=""
              type="email"
              value=""
            />
            <label
              class="c10 c11"
              for="email-input"
              required=""
            >
              Email
            </label>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="c13"
    >
      <div
        class="c14 c15"
        id="resume-field"
      >
        <label
          class="c16 c17"
          required=""
        >
          Resume
        </label>
        <label
          class="c18"
          id="resume-label"
        >
          Click to choose file
          <input
            class="c19"
            id="resume"
            name="resume"
            required=""
            type="file"
          />
        </label>
        <span
          class="c1 c20 c21"
        >
          File size should be less than 5MB
        </span>
      </div>
    </div>
    <div
      class="c13"
    >
      <div
        class="c22"
        id="Languages-checkboxGroup"
      >
        <span
          class="c1 c23"
        >
          Languages
        </span>
        
        <div
          class="c24"
        >
          <label
            class="c25"
            for="JAVA"
            id="JAVA-wrapper"
          >
            <span
              class="c1 c20"
            >
              JAVA
            </span>
            <div
              class="c26 c27"
            >
              <input
                class="c28"
                id="JAVA"
                name="java"
                type="checkbox"
              />
              <svg
                class="c29 c30"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                  fill="green"
                />
              </svg>
            </div>
          </label>
          <label
            class="c25"
            for="RUBY"
            id="RUBY-wrapper"
          >
            <span
              class="c1 c20"
            >
              RUBY
            </span>
            <div
              class="c26 c27"
            >
              <input
                class="c28"
                id="RUBY"
                name="ruby"
                type="checkbox"
              />
              <svg
                class="c29 c30"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                  fill="green"
                />
              </svg>
            </div>
          </label>
        </div>
      </div>
    </div>
    <div
      class="c13"
    >
      <div
        class="c14 c31"
        id="Role-radioGroup"
      >
        <label
          class="c32 c17"
        >
          Role
        </label>
        <div
          class="c33 c34"
        >
          <div
            class="c14 c35"
            id="Front End-radio"
          >
            <label
              class="c36 c17"
              for="Front End"
            >
              Front End
            </label>
            <div
              class="c37"
            >
              <input
                class="c38"
                id="Front End"
                name="role"
                type="radio"
                value="front-end"
              />
              <div
                class="c39 c40"
              />
            </div>
          </div>
          <div
            class="c14 c35"
            id="Back End-radio"
          >
            <label
              class="c36 c17"
              for="Back End"
            >
              Back End
            </label>
            <div
              class="c37"
            >
              <input
                class="c38"
                id="Back End"
                name="role"
                type="radio"
                value="back-end"
              />
              <div
                class="c39 c40"
              />
            </div>
          </div>
          <div
            class="c14 c35"
            id="Full Stack-radio"
          >
            <label
              class="c36 c17"
              for="Full Stack"
            >
              Full Stack
            </label>
            <div
              class="c37"
            >
              <input
                class="c38"
                id="Full Stack"
                name="role"
                type="radio"
                value="full-stack"
              />
              <div
                class="c39 c40"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c13"
    >
      <div
        class="c14 c15"
        id="birthDate"
      >
        <label
          class="c32 c17"
          for="birthDate"
        >
          Birth Date
        </label>
        <div
          class="c41"
          id="medly-popover-wrapper"
        >
          <div
            class="c14 c42"
            id="birthDate-input-field"
          >
            
            <div
              class="c33 c43"
            >
              <input
                autocomplete="off"
                class="c44 c45"
                id="birthDate-input"
                name="birthDate"
                placeholder="Birth Date"
                type="text"
                value=""
              />
            </div>
            
          </div>
        </div>
      </div>
    </div>
    <div
      class="c13"
    >
      <div
        class="c14 c15"
      >
        <label
          class="c32 c17"
          for="Experience"
        >
          Experience
        </label>
        <div
          class="c46"
          data-testid="react-datepicker"
        >
          <div
            class="c47"
          >
            <div
              class="sc-fzpkqZ c48"
              data-testid="DateRangeInputGrid"
            >
              <label
                class="c49"
                display="block"
                for="startDate"
              >
                <input
                  aria-label="Start date"
                  autocomplete="off"
                  class="c50"
                  color="#001217"
                  data-testid="DatepickerInput"
                  font-family="Montserrat, sans-serif"
                  font-size="14px"
                  font-weight="600"
                  id="startDate"
                  placeholder="Start date"
                  tabindex="0"
                  value=""
                  width="100%"
                />
              </label>
              <div
                class="c51"
              >
                <svg
                  class="c52"
                  height="12px"
                  transform="rotate(90 0 0)"
                  viewBox="0 0 9 12"
                  width="15px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4.46.001a.538.538 0 0 0-.358.174L.156 4.48a.538.538 0 1 0 .796.724l3.01-3.285v13.689a.563.563 0 0 0 .538.55.563.563 0 0 0 .538-.55V1.918l3.01 3.286a.538.538 0 1 0 .796-.724L4.898.175a.538.538 0 0 0-.437-.174z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <label
                class="c49"
                display="block"
                for="endDate"
              >
                <input
                  aria-label="End date"
                  autocomplete="off"
                  class="c50"
                  color="#001217"
                  data-testid="DatepickerInput"
                  font-family="Montserrat, sans-serif"
                  font-size="14px"
                  font-weight="600"
                  id="endDate"
                  placeholder="End date"
                  tabindex="0"
                  value=""
                  width="100%"
                />
              </label>
            </div>
            <div
              class="c53"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="c13"
    >
      <div
        class="c54"
      >
        <div
          class="c5 c55"
        >
          <div
            class="c7"
          >
            <div
              class="c8"
            >
              <input
                aria-describedby="country-helper-text"
                autocomplete="off"
                class="c9"
                id="country-input"
                name="country"
                placeholder="Please Select . . ."
                required=""
                type="text"
                value=""
              />
              <label
                class="c10 c11"
                for="country-input"
                required=""
              >
                Country
              </label>
            </div>
            <svg
              class="c29 c30 c56 c57"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.792 14.97a1 1 0 0 1-1.584 0l-3.165-4.11a1 1 0 0 1 .793-1.61h6.328a1 1 0 0 1 .793 1.61l-3.165 4.11z"
                fill="#000"
              />
            </svg>
          </div>
          
        </div>
      </div>
    </div>
    <div
      class="c13"
    >
      <div
        class="c14 c15"
        id="graduation-field"
      >
        <label
          class="c32 c17"
          for="graduation"
        >
          Graduation
        </label>
        <div
          class="c58"
          id="medly-popover-wrapper"
        >
          <div
            class="c59"
            id="graduation-container"
          >
            <div
              class="c14 c42"
              id="graduation-input-field"
            >
              
              <div
                class="c33 c43"
              >
                <input
                  autocomplete="off"
                  class="c44"
                  id="graduation-input"
                  placeholder="Please Select . . ."
                  type="text"
                  value=""
                />
              </div>
              
            </div>
            <svg
              class="c29 c60 c61"
              fill="none"
              height="1em"
              theme="[object Object]"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.875 9l-3.88 3.88L8.115 9a.996.996 0 1 0-1.41 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59a.996.996 0 0 0 0-1.41c-.39-.38-1.03-.39-1.42 0z"
                fill="#000"
                fill-opacity=".54"
              />
            </svg>
          </div>
        </div>
        
      </div>
    </div>
    <h4
      class="c1 c62 c63"
    >
      Marks
    </h4>
    <span
      class="c1 c20 c64"
    >
      Marks Information
    </span>
    <div
      class="c65"
    >
      <div
        class="c5 c6"
      >
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            <input
              aria-describedby="marks.database-helper-text"
              class="c9"
              id="marks.database-input"
              name="marks.database"
              placeholder="Database"
              required=""
              type="number"
              value=""
            />
            <label
              class="c10 c11"
              for="marks.database-input"
              required=""
            >
              Database
            </label>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="c66"
    >
      <div
        class="c5 c6"
      >
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            <input
              aria-describedby="marks.algorithms-helper-text"
              class="c9"
              id="marks.algorithms-input"
              name="marks.algorithms"
              placeholder="Algorithms"
              required=""
              type="number"
              value=""
            />
            <label
              class="c10 c11"
              for="marks.algorithms-input"
              required=""
            >
              Algorithms
            </label>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="c67"
    >
      <div
        class="c5 c6"
      >
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            <input
              aria-describedby="marks.maths-helper-text"
              class="c9"
              id="marks.maths-input"
              name="marks.maths"
              placeholder="Maths"
              required=""
              type="number"
              value=""
            />
            <label
              class="c10 c11"
              for="marks.maths-input"
              required=""
            >
              Maths
            </label>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="c13"
    >
      <label
        class="c68"
        for="agree"
        id="agree-wrapper"
      >
        <span
          class="c1 c20"
        >
          Do you Agree
        </span>
        <div
          class="c26 c27"
        >
          <input
            class="c28"
            id="agree"
            name="agree"
            type="checkbox"
          />
          <svg
            class="c29 c30"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
              fill="green"
            />
          </svg>
        </div>
      </label>
    </div>
    <div
      class="c69"
    >
      <button
        class="c70"
        color="default"
        form="medly-dynamic-form"
        type="submit"
      >
        <span
          class="c1 c23"
        >
          Upload
        </span>
      </button>
    </div>
  </form>
</div>
`;
